feat: enforce OpenAPI nullability contract with NullAway in mapping-http
Wire NullAway + ErrorProne on the gateway-mapping-http main sources
and annotate hand-written mappers, validators, converters, and
utilities to match the JSpecify contract emitted by the generated
protocol model.

Key changes:
- pom.xml: ErrorProne + NullAway compiler plugin configuration,
  AnnotatedPackages covers the generated model package and the
  hand-written mapping code, `default-testCompile` keeps nullcheck
  out of test sources.
- `@NullMarked` on the root `package-info.java`.
- `KeyUtil.keyToLong` / `keyToString` / helpers now accept and return
  `@Nullable` to match their actual null handling; callers that need
  a non-null value use `Objects.requireNonNull` with a field name.
- `ResponseMapper` / `RequestMapper` annotate helper signatures with
  `@Nullable` and add `Objects.requireNonNull` guards on response
  construction sites that silently leaked nulls before.
- Converters widen their override return type to `@Nullable String`
  matching the interface contract, and delegate to helpers instead
  of duplicating enum-conversion logic inline.
- Search/filter/validator utilities annotated to flow nullable values
  explicitly; no behavior changes beyond failing fast on contract
  violations at mapper boundaries.

Why: compile-time enforcement of the OpenAPI nullability contract at
every response-object construction site, closing the gap that
reflection-constructed request objects (Jackson) and null-returning
mappers previously papered over.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>